Operation parameter impl